# DockerUI

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml
src/dockerui/: __main__.py  app.py  app.xrc  constants.py  container.py  image.py  utils.py
src/dockerui.dist-info/: METADATA
